# turbopuffer-python

./: .release-please-manifest.json  .stats.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  SECURITY.md  UPGRADING.md  api.md  mypy.ini  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  ci_test.yml  pr-target.yml  publish-pypi.yml  regenerate-custom-types.yml  release-doctor.yml
examples/: hybrid_search.py  import_huggingface.py  import_parquet.py
scripts/: gen  lint  test
scripts/utils/: ruffen-docs.py  upload-artifact.sh
src/turbopuffer/: __init__.py  _base_client.py  _client.py  _constants.py  _exceptions.py  _resource.py  _response.py  _streaming.py  _types.py  _version.py  pagination.py
src/turbopuffer/_utils/: _logs.py  _resources_proxy.py  _transform.py
src/turbopuffer/lib/: json.py  namespace.py  performance.py  transport.py  transport_aiohttp.py  transport_httpx.py  transport_urllib3.py  vector.py
src/turbopuffer/resources/: __init__.py  namespaces.py
src/turbopuffer/types/: __init__.py  aggregate_param.py  aggregation_group.py  aggregation_param.py  attribute_schema.py  attribute_schema_config.py  attribute_schema_config_param.py  attribute_schema_param.py  attribute_type.py  attribute_type_param.py  bm25_clause_params.py  client_list_namespaces_params.py  client_namespaces_params.py  columns_param.py  contains_all_tokens_filter_params.py  contains_any_token_filter_params.py  custom.py  decay_params.py  document_columns.py  document_columns_param.py  document_row.py  document_row_param.py  document_row_response.py  document_row_with_score.py  full_text_search.py  full_text_search_config.py  full_text_search_config_param.py  full_text_search_param.py  id.py  id_param.py  include_attributes_param.py  language.py  limit_param.py  list_namespaces_response.py  namespace_delete_all_response.py  namespace_explain_query_params.py  namespace_explain_query_response.py  namespace_export_params.py  namespace_export_response.py  namespace_get_schema_response.py  (+31 more)
src/turbopuffer/types/shared/: __init__.py  attribute_schema.py  distance_metric.py  document_columns.py  document_row.py  filter.py  full_text_search_config.py
src/turbopuffer/types/shared_params/: attribute_schema.py  distance_metric.py  document_columns.py  document_row.py  filter.py  full_text_search_config.py  id.py
src/turbopuffer_api/: __init__.py  _base_client.py  _client.py  _response.py  _types.py  _version.py
src/turbopuffer_api/_utils/: _logs.py
src/turbopuffer_api/resources/: namespaces.py
src/turbopuffer_api/types/: __init__.py  document_columns_param.py  document_row_param.py  namespace_get_schema_response.py  namespace_list_params.py  namespace_query_params.py  namespace_query_response.py  namespace_summary.py  namespace_upsert_params.py
tests/: __init__.py  conftest.py  test_backend.py  test_bm25.py  test_client.py  test_compatibility.py  test_copy_from_namespace.py  test_deepcopy.py  test_extract_files.py  test_files.py  test_list_vectors.py  test_models.py  test_namespace.py  test_no_cmek.py  test_no_encryption.py  test_order_by.py  test_patch.py  test_perf_metrics.py  test_qs.py  test_readme.py  test_required_args.py  test_response.py  test_schema.py  test_streaming.py  test_transform.py  test_vectors.py  utils.py
tests/api_resources/: test_client.py  test_namespaces.py
tests/custom/: __init__.py  conftest.py  test_202_accepted.py  test_accept_encoding_header.py  test_async.py  test_bm25.py  test_compression.py  test_compression_disabled.py  test_copy_from_namespace.py  test_namespace.py  test_no_cmek.py  test_order_by.py  test_patch.py  test_performance.py  test_schema.py  test_vectors.py
tests/test_utils/: test_datetime_parse.py  test_json.py  test_proxy.py  test_typing.py
turbopuffer/: __init__.py  api.py  backend.py  error.py  namespace.py  query.py  vector_set.py  vector_space.py  vectors.py  version.py
